--- a/web/views/client/list.html
+++ b/web/views/client/list.html
@@ -17,6 +17,7 @@
                 </div>
             <div class="content">
             {{if eq true .isAdmin}}
+
                 <div class="table-responsive">
                     <div id="toolbar">
                         <a href="{{.web_base_url}}/client/add" class="btn btn-primary dim">
@@ -57,17 +58,12 @@
         onExpandRow: function () {$('body').setLang ('.detail-view');},
         onPostBody: function (data) { if ($(this)[0].locale != undefined ) $('body').setLang ('#table'); },
         detailFormatter: function (index, row, element) {
-            return '<b langtag="word-maxconnections"></b>: ' + row.MaxConn + '&emsp;'
-                + '<b langtag="word-curconnections"></b>: ' + row.NowConn + '&emsp;'
-                + '<b langtag="word-flowlimit"></b>: ' + row.Flow.FlowLimit + 'm&emsp;'
-                + '<b langtag="word-ratelimit"></b>: ' + row.RateLimit + 'kb/s&emsp;'
-                + '<b langtag="word-maxtunnels"></b>: ' + row.MaxTunnelNum + '&emsp;<br/><br/>'
-                //+ '<b langtag="word-basicusername"></b>: ' + row.Cnf.U + '&emsp;'
-                //+ '<b langtag="word-basicpassword"></b>: ' + row.Cnf.P + '&emsp;<br/><br/>'
-                + '<b langtag="word-crypt"></b>: <span langtag="word-' + row.Cnf.Crypt + '"></span>&emsp;'
-                + '<b langtag="word-compress"></b>: <span langtag="word-' + row.Cnf.Compress + '"></span>&emsp;'
-                
-                + '<b langtag="word-commandclient"></b>: ' + "<code>./npc{{.win}} -server={{.ip}}:{{.p}} -vkey=" + row.VerifyKey + " -type=" +{{.bridgeType}} +"</code>"
+            return '<b langtag="word-blackip"></b>: ' + row.BlackIpList + '&emsp;<br/><br/>'
+                + '<b langtag="word-createtime"></b>: ' + row.CreateTime + '&emsp;<br/><br/>'
+                + '<b langtag="word-lastonlinetime"></b>: ' + row.LastOnlineTime + '&emsp;<br/><br/>'
+                + '<b langtag="word-quicklycommand"></b>: <span>' + encodeToBase64('{{.ip}}:{{.p}} ' + row.VerifyKey)   + '</span>&emsp;<button class="copy btn btn-info btn-xs" onclick="copyCommand(this)" data-clipboard-text="">复制</button><br/>'
+                + '<b langtag="word-commandclient"></b>: ' + "<code>./npc{{.linux}} -server={{.ip}}:{{.p}} -vkey=" + row.VerifyKey + " -type=" +{{.bridgeType}} +"</code><button class=\"copy btn btn-info btn-xs\" onclick=\"copyCommand(this)\" data-clipboard-text=\"\">复制</button><br/>"
+                + '<b langtag="word-commandclient-tls"></b>: ' + "<code>./npc{{.linux}} -server={{.ip}}:{{.tls_p}} -vkey=" + row.VerifyKey + " -tls_enable=true</code><button class=\"copy btn btn-info btn-xs\" onclick=\"copyCommand(this)\" data-clipboard-text=\"\">复制</button>"
         },
         //表格的列
         columns: [
@@ -80,12 +76,6 @@
             {
                 field: 'Remark',//域值
                 title: '<span langtag="word-remark"></span>',//标题
-                halign: 'center',
-                visible: true//false表示不显示
-            },
-            {
-                field: 'Version',//域值
-                title: '<span langtag="word-version"></span>',//标题
                 halign: 'center',
                 visible: true//false表示不显示
             },
@@ -200,10 +190,30 @@
                 formatter: function (value, row, index) {
                     return '<div class="btn-group"><a href="{{.web_base_url}}/index/all?client_id=' + row.Id
                         + '" class="btn btn-outline btn-primary" langtag="word-tunnel"></a>'
-               
-                        + '</div>'
                 }
             }
         ]
     });
+
+    function encodeToBase64(str){
+        return btoa("nps "+ str);
+    }
+
+    function copyCommand(data) {
+        data.setAttribute("data-clipboard-text", data.previousElementSibling.innerHTML)
+    }
+
+    var clipboard = new ClipboardJS('.copy');
+    clipboard.on('success', function (e) {
+        // alert("复制成功"+e.text)
+        toastr.success('复制成功');
+        e.clearSelection();
+    });
+
+    clipboard.on('error', function (e) {
+        // alert("复制失败")
+        toastr.error('复制失败', '提示');
+    });
+
+
 </script>
