--- a/web/views/login/index.html
+++ b/web/views/login/index.html
@@ -19,21 +19,23 @@
     <script src="{{.web_base_url}}/static/js/jquery-3.4.1.min.js"></script>
     <script src="{{.web_base_url}}/static/js/bootstrap.min.js"></script>
     <!-- Latest compiled and minified Locales -->
-    <script src="{{.web_base_url}}/static/js/language.js" type="text/javascript"></script>
+    <script src="{{.web_base_url}}/static/js/language.js?v=20250528" type="text/javascript"></script>
 
 </head>
 
 <body class="gray-bg">
-    <div class="row border-bottom">
-        <nav class="navbar navbar-static-top navbar-right" role="navigation" style="margin: 20px 40px">
-<div></div>
-            <h1 style="margin:0px" class="navbar-header font-bold" langtag="application"></h1>
-            <span class="btn-group dropdown">
-                <button id="languagemenu" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-globe-asia fa-lg"></i><span></span></button>
+<div class="row border-bottom">
+    <nav class="navbar navbar-static-top navbar-right" role="navigation" style="margin: 20px 40px">
+        <div></div>
+        <h1 style="margin:0px" class="navbar-header font-bold" langtag="application"></h1>
+        <span class="btn-group dropdown">
+                <button id="languagemenu" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false"><i
+                            class="fa fa-globe-asia fa-lg"></i><span></span></button>
                 <ul class="dropdown-menu"></ul>
             </span>
-        </nav>
-    </div>
+    </nav>
+</div>
 <div class="loginColumns animated fadeInDown mt-3 px-5">
     <div class="row">
 
@@ -48,16 +50,27 @@
             <div class="ibox-content">
                 <form class="m-t" onsubmit="return false">
                     <div class="form-group">
-                        <input name="username" class="form-control" placeholder="username" required="" langtag="word-username">
+                        <input name="username" class="form-control" placeholder="username" required=""
+                               langtag="word-username">
                     </div>
                     <div class="form-group">
-                        <input name="password" type="password" class="form-control" placeholder="password" required="" langtag="word-password">
+                        <input name="password" type="password" class="form-control" placeholder="password" required=""
+                               langtag="word-password">
                     </div>
-                    <button onclick="login()" class="btn btn-primary block full-width m-b" langtag="word-login"></button>
-                {{if eq true .register_allow}}
-                    <p class="text-muted text-center"><small langtag="info-noaccount"></small></p>
-                    <a class="btn btn-sm btn-white btn-block" href="{{.web_base_url}}/login/register" langtag="word-register"></a>
-                {{end}}
+                    {{if eq true .captcha_open}}
+                        <div class="form-group">
+                            {{create_captcha}}
+                            <input name="captcha" class="form-control" placeholder="captcha" required=""
+                                   langtag="word-captcha">
+                        </div>
+                    {{end}}
+                    <button onclick="login()" class="btn btn-primary block full-width m-b"
+                            langtag="word-login"></button>
+                    {{if eq true .register_allow}}
+                        <p class="text-muted text-center"><small langtag="info-noaccount"></small></p>
+                        <a class="btn btn-sm btn-white btn-block" href="{{.web_base_url}}/login/register"
+                           langtag="word-register"></a>
+                    {{end}}
                 </form>
             </div>
         </div>
@@ -67,7 +80,7 @@
         <div class="pull-right">
             <span langtag="word-readmore"></span> <strong><a href="https://github.com/wyx176/nps-socks5" langtag="word-go"></a></strong>
         </div>
-        <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2060</div>
+        <div><a href="https://ehang.io/nps" langtag="word-copyright"></a></div>
     </div>
 </div>
 
@@ -76,7 +89,8 @@
 
 
 <script type="text/javascript">
-    window.nps = { "web_base_url": {{.web_base_url}} }
+    window.nps = {"web_base_url": {{.web_base_url}} }
+
     // Login Page Flipbox control
     function login() {
         $.ajax({
