--- a/web/views/client/edit.html
+++ b/web/views/client/edit.html
@@ -11,58 +11,7 @@
                             <input class="form-control" value="{{.c.Remark}}" type="text" name="remark" placeholder=""  langtag="word-remark">
                         </div>
                     </div>
-                {{if eq true .isAdmin}}
-                {{if eq true .allow_flow_limit}}
-                    <div class="form-group" id="flow_limit">
-                        <label class="control-label font-bold" langtag="word-flowlimit"></label>
-                        <div class="col-sm-10">
-                            <input class="form-control" value="{{.c.Flow.FlowLimit}}" type="text" name="flow_limit" placeholder="" langtag="info-unrestricted">
-                            <span class="help-block m-b-none" langtag="word-unit"></span>: M
-                        </div>
-                    </div>
-                {{end}}
-                {{if eq true .allow_rate_limit}}
 
-                    <div class="form-group" id="rate_limit">
-                        <label class="control-label font-bold" langtag="word-ratelimit"></label>
-                        <div class="col-sm-10">
-                            <input class="form-control" value="{{.c.RateLimit}}" type="text" name="rate_limit" placeholder="" langtag="info-unrestricted">
-                            <span class="help-block m-b-none" langtag="word-unit"></span>: KB/S
-                        </div>
-                    </div>
-                {{end}}
-                {{if eq true .allow_connection_num_limit}}
-
-                    <div class="form-group" id="max_conn">
-                        <label class="control-label font-bold" langtag="word-maxconnections"></label>
-                        <div class="col-sm-10">
-                            <input class="form-control" value="{{.c.MaxConn}}" type="text" name="max_conn" placeholder="" langtag="info-unrestricted">
-                        </div>
-                    </div>
-                {{end}}
-                {{if eq true .allow_tunnel_num_limit}}
-                    <div class="form-group" id="max_tunnel">
-                        <label class="control-label font-bold" langtag="word-maxtunnels"></label>
-                        <div class="col-sm-10">
-                            <input class="form-control" value="{{.c.MaxTunnelNum}}" type="text" name="max_tunnel" placeholder="" langtag="info-unrestricted">
-                        </div>
-                    </div>
-                {{end}}
-                {{end}}
-                    <div class="form-group" id="u" style="display:none">
-                        <label class="control-label font-bold" langtag="word-basicusername"></label>
-                        <div class="col-sm-10">
-                            <input class="form-control" value="{{.c.Cnf.U}}" type="text" name="u" placeholder="" langtag="info-unrestricted">
-                            <span class="help-block m-b-none" langtag="info-onlyproxy"></span>
-                        </div>
-                    </div>
-                    <div class="form-group" id="p" style="display:none">
-                        <label class="control-label font-bold" langtag="word-basicpassword"></label>
-                        <div class="col-sm-10">
-                            <input class="form-control" value="{{.c.Cnf.P}}" type="text" name="p" placeholder="" langtag="info-unrestricted">
-                            <span class="help-block m-b-none" langtag="info-onlyproxy"></span>
-                        </div>
-                    </div>
                 {{if eq true .isAdmin}}
                     <div class="form-group" id="vkey">
                         <label class="control-label font-bold" langtag="word-verifyKey"></label>
@@ -72,7 +21,7 @@
                         </div>
                     </div>
                 {{end}}
-                {{if eq true false}}
+                {{if eq true .allow_user_login}}
                 {{if or (eq true .allow_user_change_username) (eq true .isAdmin)}}
                     <div class="form-group" id="web_username">
                         <label class="control-label font-bold" langtag="word-webusername"></label>
@@ -88,33 +37,15 @@
                         </div>
                     </div>
                 {{end}}
-                    <div class="form-group" id="config_conn_allow" style="display:none"> 
-                        <label class="control-label font-bold" langtag="word-connectbyconfig"></label>
+
+                    <div class="form-group" id="black_ip_list">
+                        <label class="control-label font-bold" langtag="word-blackiplist"></label>
                         <div class="col-sm-10">
-                            <select class="form-control" name="config_conn_allow">
-                                <option {{if eq true .c.ConfigConnAllow}}selected{{end}}  value="1" langtag="word-yes"></option>
-                                <option {{if eq false .c.ConfigConnAllow}}selected{{end}} value="0" langtag="word-no"></option>
-                            </select>
+                            <textarea class="form-control" rows="4" type="text" name="blackiplist" placeholder="" langtag="info-suchasblackiplist">{{.BlackIpList}}</textarea>
+                            <span class="help-block m-b-none" langtag="info-descblackiplist"></span>
                         </div>
                     </div>
-                    <div class="form-group" id="compress" >
-                        <label class="control-label font-bold" langtag="word-compress"></label>
-                        <div class="col-sm-10">
-                            <select class="form-control" name="compress">
-								<option {{if eq true .c.Cnf.Compress}}selected{{end}}  value="1" langtag="word-yes"></option>
-                                <option {{if eq false .c.Cnf.Compress}}selected{{end}} value="0" langtag="word-no"></option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-group" id="compress" >
-                        <label class="control-label font-bold" langtag="word-crypt"></label>
-                        <div class="col-sm-10">
-                            <select class="form-control" name="crypt">
-								<option {{if eq true .c.Cnf.Crypt}}selected{{end}} value="1" langtag="word-yes"></option>
-                                <option {{if eq false .c.Cnf.Crypt}}selected{{end}} value="0" langtag="word-no"></option>
-                            </select>
-                        </div>
-                    </div>
+
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
