--- a/web/views/index/add.html
+++ b/web/views/index/add.html
@@ -4,7 +4,7 @@
             <h3 class="ibox-title" langtag="page-add"></h3>
             <div class="ibox-content">
                 <form class="form-horizontal">
-                    <div class="form-group">
+                    <div class="form-group hidden">
                         <label class="control-label font-bold" langtag="word-scheme"></label>
                         <div class="col-sm-10">
                             <span class="help-block m-b-none font-bold" langtag="word-usecase"></span>:
@@ -17,7 +17,7 @@
                                 <span id="casep2p" langtag="info-casep2p"></span>
                                 <span id="casefile" langtag="info-casefile"></span>
                             </span>
-                            <select class="form-control" name="type" id="type" style="display:none">
+                            <select class="form-control" name="type" id="type">
                                 <option value="tcp" langtag="scheme-tcp"></option>
                                 <option value="udp" langtag="scheme-udp"></option>
                                 <option value="httpProxy" langtag="scheme-httpProxy"></option>
@@ -28,37 +28,44 @@
                             </select>
                         </div>
                     </div>
-
-                    <div class="form-group" id="client_id">
-                        <label class="control-label font-bold" langtag="word-clientid"></label>
-                        <div class="col-sm-10">
-                            <input value="{{.client_id}}" class="form-control" type="text" name="client_id"
-                                   placeholder="" langtag="word-clientid">
-                        </div>
-                    </div>
-
                     <div class="form-group">
                         <label class="control-label font-bold" langtag="word-remark"></label>
                         <div class="col-sm-10">
                             <input class="form-control" type="text" name="remark" placeholder=""
-                                   langtag="word-remark">
+                                   langtag="info-unrestricted">
                         </div>
                     </div>
-					<div class="form-group">
-                        <label class="control-label font-bold" langtag="word-expiretime"></label>
+                    <div class="form-group" id="client_id">
+                        <label class="control-label font-bold" langtag="word-clientid"></label>
                         <div class="col-sm-10">
-                           <input type="text" name="expire_time" class="form-control"  placeholder="留空则表示不受限制" readonly id="expiretime">
+                            <select class="form-control"  name="client_id" placeholder="" langtag="word-belongclient"></select>
+
+<!--                            <input value="{{.client_id}}" class="form-control" type="text" name="client_id"-->
+<!--                                   placeholder="" langtag="word-clientid">-->
                         </div>
                     </div>
-                    {{if eq true .allow_multi_ip}}
-                        <div class="form-group" id="server_ip">
-                            <label class="control-label font-bold" langtag="word-serverip"></label>
-                            <div class="col-sm-10">
-                                <input class="form-control" type="text" value="0.0.0.0" name="server_ip" placeholder=""
-                                       langtag="info-suchasip">
-                            </div>
+
+                    <div class="form-group" id="flow_limit">
+                        <label class="control-label font-bold" langtag="word-flowlimit"></label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" name="flow_limit" placeholder="" langtag="info-unrestricted">
+                            <span class="help-block m-b-none" langtag="word-unit"></span>: M
                         </div>
-                    {{end}}
+                    </div>
+
+                    <div class="form-group" id="max_conn">
+                        <label class="control-label font-bold" langtag="word-maxconnections"></label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" name="max_conn" placeholder="" langtag="info-unrestricted">
+                        </div>
+                    </div>
+
+                    <div class="form-group" {{if eq false .isAdmin}} style="display:none" {{end}}>
+                        <label class="col-sm-2 control-label font-bold" langtag="word-expiretime"></label>
+                        <div class="col-sm-10">
+                            <input type="text" name="expire_time" class="form-control"  placeholder="留空则表示不受限制" readonly id="expiretime">
+                        </div>
+                    </div>
                     <div class="form-group" id="port">
                         <label class="control-label font-bold" langtag="word-serverport"></label>
                         <div class="col-sm-10">
@@ -66,8 +73,8 @@
                                    langtag="info-suchasport">
                         </div>
                     </div>
-					
-					<div class="form-group" id="S5User">
+
+                    <div class="form-group" id="S5User">
                         <label class="control-label font-bold" langtag="info-suchass5usertitle"></label>
                         <div class="col-sm-10">
                             <textarea class="form-control" name="S5User" rows="4" placeholder=""
@@ -138,10 +145,10 @@
 </div>
 <script>
     var arr = []
-    arr["all"] = ["port", "target", "password", "local_path", "strip_pre", "local_proxy", "client_id", "server_ip","expire_time"]
+    arr["all"] = ["port", "target", "password", "local_path", "strip_pre", "local_proxy", "client_id", "server_ip"]
     arr["tcp"] = ["port", "target", "local_proxy", "client_id", "server_ip"]
     arr["udp"] = ["port", "target", "local_proxy", "client_id", "server_ip"]
-    arr["socks5"] = ["port", "client_id", "server_ip","S5User","expire_time"]
+    arr["socks5"] = ["port", "client_id", "server_ip","S5User","expire_time","flow_limit","max_conn"]
     arr["httpProxy"] = ["port", "client_id", "server_ip"]
     arr["secret"] = ["target", "password", "client_id", "server_ip"]
     arr["p2p"] = ["target", "password", "client_id", "server_ip"]
@@ -151,7 +158,7 @@
         $(".form-group[id]").css("display", "none");
         $("#usecase span").css("display", "none");
         o = $("#type").val();
-        $('#casesocks5').css("display", "inline")
+        $('#case' + o).css("display", "inline")
         for (var i = 0; i < arr[o].length; i++) {
             $("#" + arr[o][i]).css("display", "block")
         }
@@ -166,11 +173,32 @@
         $("#use_client").on("change", function () {
             resetForm()
         })
-		
-		/* 第三步:初始化插件  */
-		laydate.render({
-			elem: '#expiretime' //指定元素
-			 ,type: 'datetime'
-		});
+
+        getClientList()
+        /* 第三步:初始化插件  */
+        laydate.render({
+            elem: '#expiretime' //指定元素
+            ,type: 'datetime'
+        });
     })
+
+    function getClientList() {
+        $("select[name='client_id']").empty();
+        $.ajax({
+            type: "POST",
+            url: "{{.web_base_url}}/client/list", // 服务器数据的加载地址
+            data: {order:"asc",offset:0,limit:999},
+            dataType : "json",
+            success : function(data) {
+                if (data && data.rows.length > 0) {
+                    for(var i=0; i<data.rows.length; i++){
+                        var option="<option value=\""+data.rows[i].Id+"\"";
+                        option += ">"+data.rows[i].Id + '-' +data.rows[i].Remark+"</option>"; //动态添加数据
+                        $("select[name='client_id']").append(option);
+                        $("select[name='client_id']").find("option[value='{{.t.Client.Id}}']").attr("selected",true);
+                    }
+                }
+            }
+        });
+    }
 </script>
