--- a/web/views/login/register.html
+++ b/web/views/login/register.html
@@ -19,7 +19,7 @@
     <script src="{{.web_base_url}}/static/js/jquery-3.4.1.min.js"></script>
     <script src="{{.web_base_url}}/static/js/bootstrap.min.js"></script>
     <!-- Latest compiled and minified Locales -->
-    <script src="{{.web_base_url}}/static/js/language.js" type="text/javascript"></script>
+    <script src="{{.web_base_url}}/static/js/language.js?v=20250528" type="text/javascript"></script>
 
 </head>
 
@@ -54,9 +54,9 @@
     <hr/>
     <div class="footer">
         <div class="pull-right">
-            <span langtag="word-readmore"></span> <strong><a href="https://github.com/wyx176/nps-socks5" langtag="word-go"></a></strong>
+            <span langtag="word-readmore"></span> <strong><a href="https://ehang.io/nps" langtag="word-go"></a></strong>
         </div>
-        <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2060</div>
+        <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2019</div>
     </div>
 <script>
     window.nps = { "web_base_url": {{.web_base_url}} }
